// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component should render correctly when total items is 0 1`] = `
.c4 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c4 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 li {
  margin: 0 0.4rem;
}

.c0 li:last-child {
  margin-right: 0.8rem;
}

.c0 li:first-child {
  margin-left: 0.8rem;
}

.c1 > li {
  margin: 0;
}

.c2 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  background: #ffffff;
}

.c2:hover {
  cursor: pointer;
}

.c2:focus {
  outline: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c2 > .c3,
.c2 .c3 {
  padding: 0.4rem;
}

.c2 .c3 * {
  fill: #435465;
}

.c2:disabled {
  background: #ffffff;
}

.c2:disabled .c3 * {
  fill: #C7D0D8;
}

.c2:not(:disabled):hover {
  background: #F7F8F9;
}

.c2:not(:disabled):hover .c3 * {
  fill: #303C48;
}

.c2:not(:disabled):active {
  background: #eff2f4;
}

.c2:not(:disabled):active .c3 * {
  fill: #13181D;
}

<div>
  <ul
    class="c0 c1"
  >
    <li>
      <button
        class="sc-1dmgj8o-1 c2"
        disabled=""
        type="button"
      >
        <svg
          class="c3 c4"
          fill="none"
          height="1em"
          title="prev"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 6.705a.996.996 0 0 0-1.41 0L9 11.295a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41l-3.88-3.89L15 8.115c.39-.39.38-1.03 0-1.41z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </button>
    </li>
    <li>
      <button
        class="sc-1dmgj8o-1 c2"
        disabled=""
        type="button"
      >
        <svg
          class="c3 c4"
          fill="none"
          height="1em"
          title="next"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 6.71a.996.996 0 0 0 0 1.41L12.88 12 9 15.88a.996.996 0 1 0 1.41 1.41L15 12.7a.996.996 0 0 0 0-1.41L10.41 6.7c-.38-.38-1.02-.38-1.41.01z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Pagination component should render correctly with all the default props 1`] = `
.c4 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c4 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c9 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: center;
}

.c10 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 600;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: center;
}

.c0 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 li {
  margin: 0 0.4rem;
}

.c0 li:last-child {
  margin-right: 0.8rem;
}

.c0 li:first-child {
  margin-left: 0.8rem;
}

.c1 > li {
  margin: 0;
}

.c5 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  color: #3872D2;
  background: #EBF1FA;
  border-radius: 50%;
}

.c5:hover {
  cursor: pointer;
}

.c5:focus {
  outline: none;
}

.c5:disabled {
  cursor: not-allowed;
}

.c5:active {
  font-weight: 700;
  color: #13181D;
  background: #eff2f4;
}

.c5 .c6 {
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 700;
}

.c8 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  color: #435465;
  background: #ffffff;
  border-radius: 50%;
}

.c8:hover {
  cursor: pointer;
}

.c8:focus {
  outline: none;
}

.c8:disabled {
  cursor: not-allowed;
}

.c8:hover {
  color: #303C48;
  background: #F7F8F9;
}

.c8:active {
  font-weight: 700;
  color: #13181D;
  background: #eff2f4;
}

.c8 .c6 {
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 600;
}

.c2 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  background: #ffffff;
}

.c2:hover {
  cursor: pointer;
}

.c2:focus {
  outline: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c2 > .c3,
.c2 .c3 {
  padding: 0.4rem;
}

.c2 .c3 * {
  fill: #435465;
}

.c2:disabled {
  background: #ffffff;
}

.c2:disabled .c3 * {
  fill: #C7D0D8;
}

.c2:not(:disabled):hover {
  background: #F7F8F9;
}

.c2:not(:disabled):hover .c3 * {
  fill: #303C48;
}

.c2:not(:disabled):active {
  background: #eff2f4;
}

.c2:not(:disabled):active .c3 * {
  fill: #13181D;
}

<div>
  <ul
    class="c0 c1"
  >
    <li>
      <button
        class="sc-1dmgj8o-1 c2"
        disabled=""
        type="button"
      >
        <svg
          class="c3 c4"
          fill="none"
          height="1em"
          title="prev"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 6.705a.996.996 0 0 0-1.41 0L9 11.295a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41l-3.88-3.89L15 8.115c.39-.39.38-1.03 0-1.41z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </button>
    </li>
    <li>
      <button
        class="sc-1dmgj8o-1 c5"
        type="button"
      >
        <span
          class="c6 c7"
        >
          1
        </span>
      </button>
    </li>
    <li>
      <button
        class="sc-1dmgj8o-1 c8"
        type="button"
      >
        <span
          class="c6 c7"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        class="sc-1dmgj8o-1 c8"
        type="button"
      >
        <span
          class="c6 c7"
        >
          3
        </span>
      </button>
    </li>
    <li>
      <div
        class="c9"
        id="medly-popover-wrapper"
      >
        <button
          class="sc-1dmgj8o-1 c8"
          type="button"
        >
          <h5
            class="c6 c10"
          >
            ...
          </h5>
        </button>
      </div>
    </li>
    <li>
      <button
        class="sc-1dmgj8o-1 c8"
        type="button"
      >
        <span
          class="c6 c7"
        >
          8
        </span>
      </button>
    </li>
    <li>
      <button
        class="sc-1dmgj8o-1 c2"
        type="button"
      >
        <svg
          class="c3 c4"
          fill="none"
          height="1em"
          title="next"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 6.71a.996.996 0 0 0 0 1.41L12.88 12 9 15.88a.996.996 0 1 0 1.41 1.41L15 12.7a.996.996 0 0 0 0-1.41L10.41 6.7c-.38-.38-1.02-.38-1.41.01z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Pagination component should render correctly with all the props given 1`] = `
.c6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: center;
}

.c7 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 600;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: center;
}

.c0 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 li {
  margin: 0 0.4rem;
}

.c0 li:last-child {
  margin-right: 0.8rem;
}

.c0 li:first-child {
  margin-left: 0.8rem;
}

.c1 > li {
  margin: 0;
}

.c2 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  color: #3872D2;
  background: #EBF1FA;
  border-radius: 50%;
}

.c2:hover {
  cursor: pointer;
}

.c2:focus {
  outline: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c2:active {
  font-weight: 700;
  color: #13181D;
  background: #eff2f4;
}

.c2 .c3 {
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 700;
}

.c5 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  color: #435465;
  background: #ffffff;
  border-radius: 50%;
}

.c5:hover {
  cursor: pointer;
}

.c5:focus {
  outline: none;
}

.c5:disabled {
  cursor: not-allowed;
}

.c5:hover {
  color: #303C48;
  background: #F7F8F9;
}

.c5:active {
  font-weight: 700;
  color: #13181D;
  background: #eff2f4;
}

.c5 .c3 {
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 600;
}

<div>
  <ul
    class="c0 c1"
  >
    <li>
      <button
        class="sc-1dmgj8o-1 c2"
        type="button"
      >
        <span
          class="c3 c4"
        >
          1
        </span>
      </button>
    </li>
    <li>
      <button
        class="sc-1dmgj8o-1 c5"
        type="button"
      >
        <span
          class="c3 c4"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        class="sc-1dmgj8o-1 c5"
        type="button"
      >
        <span
          class="c3 c4"
        >
          3
        </span>
      </button>
    </li>
    <li>
      <div
        class="c6"
        id="medly-popover-wrapper"
      >
        <button
          class="sc-1dmgj8o-1 c5"
          type="button"
        >
          <h5
            class="c3 c7"
          >
            ...
          </h5>
        </button>
      </div>
    </li>
    <li>
      <button
        class="sc-1dmgj8o-1 c5"
        type="button"
      >
        <span
          class="c3 c4"
        >
          15
        </span>
      </button>
    </li>
  </ul>
</div>
`;
